--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,15 +1,15 @@
 \chapter{Introduction}
 \label{chap:introduction}
 
-Artificial Intelligence (AI) has witnessed an unprecedented surge in prominence and utility, becoming a transformative force across diverse domains. From powering autonomous vehicles to aiding healthcare diagnosis and recommendation systems, AI applications have become increasingly integrated into everyday life. However, this rapid proliferation has raised concerns about the pervasive presence of bias within AI systems.
+Artificial Intelligence (AI) has experienced an unprecedented surge in prominence and utility, emerging as a transformative force across diverse domains. From propelling autonomous vehicles to facilitating healthcare diagnosis and recommendation systems, AI applications have become deeply integrated into daily life. Nevertheless, this rapid proliferation has given rise to concerns regarding the pervasive presence of bias within AI systems.
 
-Bias in AI refers to inadvertent or systematic preferences shown towards specific groups or characteristics within data, algorithms, or decision-making processes, leading to unjust and unequal outcomes. In this era of AI-driven decision-making, addressing bias is not merely a technological challenge but a moral and societal necessity. The ethical principle of fairness underscores the collective aspiration to ensure that AI systems yield equitable and just results for all individuals, regardless of their personal attributes.
+AI bias, in this context, denotes inadvertent or systematic preferences exhibited toward specific groups or characteristics within data, algorithms, or decision-making processes. This bias can lead to unjust and unequal outcomes, making the mitigation of bias not just a technological challenge but also a moral and societal imperative in this era of AI-driven decision-making. The ethical principle of fairness underlines the collective aspiration to ensure that AI systems yield equitable and just results for all individuals, regardless of their personal attributes.
 
-The repercussions of bias and unfairness in AI extend beyond technological concerns, carrying profound societal implications that impact crucial areas such as employment, healthcare, and access to critical services. Biased AI systems perpetuate and exacerbate existing inequalities, inadvertently reinforcing harmful stereotypes and undermining the foundational principles of justice and equality.
+The implications of bias and unfairness in AI extend beyond mere technological considerations, carrying profound societal consequences that impact vital areas such as employment, healthcare, and access to critical services. Biased AI systems perpetuate and amplify existing inequalities, inadvertently reinforcing detrimental stereotypes and compromising the foundational principles of justice and equality.
 
-To address these challenges, the Fair-by-Design workflow presented in this work extends the traditional machine learning workflow by explicitly incorporating fairness considerations from the outset of AI system design. This approach proactively aims to address and mitigate bias throughout the development process, making fairness an integral part of the system's foundation.
+To tackle these challenges, this work introduces the Fair-by-Design workflow, which extends the conventional machine learning workflow by explicitly incorporating fairness considerations from the inception of AI system design. This proactive approach aims to identify and mitigate bias throughout the development process, making fairness an integral aspect of the system's foundation.
 
-The objective is to compare not only the accuracy but also the value of specific fairness metrics at the conclusion of the workflow. By contrasting these outcomes with a scenario where fairness assumptions are not made, the goal is to provide a comprehensive assessment of both accuracy and fairness within the proposed framework.
+The objective of this study is not limited to comparing accuracy alone but extends to assessing the value of specific fairness metrics at the conclusion of the workflow. By contrasting these outcomes with a scenario where fairness assumptions are not considered, the goal is to provide a comprehensive evaluation of both accuracy and fairness within the proposed framework.
 
 The structure of this thesis unfolds as follows: \cref{chap:background} conducts a thorough review of existing approaches and methodologies designed to address bias and promote fairness in the development of AI systems. This chapter lays the groundwork upon which the innovative Fair-by-Design workflow is built. \cref{chap:contribution} delves into the intricacies of the workflow, elucidating the seamless integration of various fairness approaches into the design process. \cref{chap:validation} meticulously presents the results derived from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, \cref{chap:conclusions} not only imparts insights gleaned from this research but also outlines prospective directions for further advancements in this critical and ever-evolving field.
 
