--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -329,11 +329,30 @@ Choosing a fairness metric given a fairness notion, or vice versa, requires a nu
 \end{enumerate}
 
 This decisional process is well-represented in the following schema:
-\newpage
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.9\textwidth, height=1.3\textwidth]{notion-metric.png}
-    \label{fig:choice}
+    \begin{tikzpicture}[node distance=2cm]
+        \node (start) [startstop] {Protected attribute chosen};
+        \node (choice) [decision, below of=start] {Starting point};
+        \node (fm) [startstop, left of=choice, xshift=-2cm] {Fairness Metric};
+        \node (fn) [startstop, right of=choice, xshift=2cm] {Fairness Notion};
+        \node (dfg) [startstop, below of=fm] {Definition of fairness goals};
+        \node (fns) [startstop, below of=dfg] {Fairness metric selection};
+        \node (fms) [startstop, below of=fns] {Selection of the fairness notion that better aligns with fairness metric}
+        \node (dfgfn) [startstop, below of=fn] {Definition of fairness goals};
+        \node (fmst) [startstop, below of=dfgfn] {Understanding and study of the several fairness metrics};
+        \node (end) [startstop, below of=fmst] {Selection of the fairness metric that better aligns with the fairness notion}
+
+        \draw [arrow] (start) -- (choice);
+        \draw [arrow] (choice) -- (fm);
+        \draw [arrow] (choice) -- (fn);
+        \draw [arrow] (fm) -- (dfg);
+        \draw [arrow] (dfg) -- (fns);
+        \draw [arrow] (fms) -- (fns);
+        \draw [arrow] (fn) -- (dfgfn);
+        \draw [arrow] (dfgfn) -- (fmst);
+        \draw [arrow] (fmst) -- (end);
+    \end{tikzpicture}
     \caption{Fairness Notion and Metric choice}
 \end{figure}
 
