--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -50,7 +50,7 @@ minimum width=3cm,
 minimum height=1cm,
 text centered, 
 draw=black, 
-fill=red!30]
+fill=blue!30]
 
 \tikzstyle{decision} = [diamond, 
 minimum width=3cm, 
