--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -341,7 +341,7 @@ This decisional process is well-represented in the following schema:
         \node (fms) [startstop, below of=fns] {Selection of the fairness notion that better aligns with fairness metric}
         \node (dfgfn) [startstop, below of=fn] {Definition of fairness goals};
         \node (fmst) [startstop, below of=dfgfn] {Understanding and study of the several fairness metrics};
-        \node (end) [startstop, below of=fmst] {Selection of the fairness metric that better aligns with the fairness notion}
+        \node (end) [startstop, below of=fmst] {Selection of the fairness metric that better aligns with the fairness notion};
 
         \draw [arrow] (start) -- (choice);
         \draw [arrow] (choice) -- (fm);
