--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -338,7 +338,7 @@ This decisional process is well-represented in the following schema:
         \node (fn) [startstop, right of=choice, xshift=2cm] {Fairness Notion};
         \node (dfg) [startstop, below of=fm] {Definition of fairness goals};
         \node (fns) [startstop, below of=dfg] {Fairness metric selection};
-        \node (fms) [startstop, below of=fns] {Selection of the fairness notion that better aligns with fairness metric}
+        \node (fms) [startstop, below of=fns] {Selection of the fairness notion that better aligns with fairness metric};
         \node (dfgfn) [startstop, below of=fn] {Definition of fairness goals};
         \node (fmst) [startstop, below of=dfgfn] {Understanding and study of the several fairness metrics};
         \node (end) [startstop, below of=fmst] {Selection of the fairness metric that better aligns with the fairness notion};
