--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -14,6 +14,9 @@
 \usepackage{acronym}
 \usepackage{tikz}
 \usepackage{float}
+\usepackage[margin=0.25in]{geometry}
+\usepackage{pgfplots}
+\pgfplotsset{width=10cm,compat=1.9}
 %\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 
 \usetikzlibrary{shapes.geometric, arrows}
