--- a/sections/validation.tex
+++ b/sections/validation.tex
@@ -291,9 +291,9 @@ Similarly, for each fairness algorithm, the minimum and maximum fairness values 
             ybar interval=0.7,
         ]
         \addplot 
-            coordinates {(DA, 0.5409) (FTU, 0.3809) (GS, 0.4103) (EG, 0.5102) (TO, 0.0000)};
+            coordinates {(1, 0.5409) (2, 0.3809) (3, 0.4103) (4, 0.5102) (5, 0.0000)};
         \addplot 
-            coordinates {(DA, 0.5950) (FTU, 0.4075) (GS, 0.4325) (EG, 0.6154) (TO, 0.0000)};
+            coordinates {(1, 0.5950) (2, 0.4075) (3, 0.4325) (4, 0.6154) (5, 0.0000)};
         \legend{Min,Max}
         \end{axis}
         \end{tikzpicture}
@@ -331,9 +331,9 @@ The disparate impact metric measures the degree on which each algorithm reach th
             ybar interval=0.7,
         ]
         \addplot 
-            coordinates {(DA, 0.7352) (FTU, 0.5703) (GS, 0.6247) (EG, 0.6802) (TO, 0.0000)};
+            coordinates {(1, 0.7352) (2, 0.5703) (3, 0.6247) (4, 0.6802) (5, 0.0000)};
         \addplot 
-            coordinates {(DA, 0.7486) (FTU, 0.6308) (GS, 0.6376) (EG, 0.7442) (TO, 0.0000)};
+            coordinates {(1, 0.7486) (2, 0.6308) (3, 0.6376) (4, 0.7442) (5, 0.0000)};
         \legend{Min,Max}
         \end{axis}
         \end{tikzpicture}
@@ -366,9 +366,9 @@ Still considering the disparate impact metric but considering the \emph{Race} pr
             ybar interval=0.7,
         ]
         \addplot 
-            coordinates {(DA, 0.0155) (FTU, 0.0197) (GS, 0.0149) (EG, 0.0174) (TO, 0.0000)};
+            coordinates {(1, 0.0155) (2, 0.0197) (3, 0.0149) (4, 0.0174) (5, 0.0000)};
         \addplot 
-            coordinates {(DA, 0.0171) (FTU, 0.0242) (GS, 0.0163) (EG, 0.0265) (TO, 0.0000)};
+            coordinates {(1, 0.0171) (2, 0.0242) (3, 0.0163) (4, 0.0265) (5, 0.0000)};
         \legend{Min,Max}
         \end{axis}
         \end{tikzpicture}
@@ -400,9 +400,9 @@ The demographic parity difference metric measures the degree on which each algor
             ybar interval=0.7,
         ]
         \addplot 
-            coordinates {(DA, 0.0051) (FTU, 0.0063) (GS, 0.0046) (EG, 0.0064) (TO, 0.0000)};
+            coordinates {(1, 0.0051) (2, 0.0063) (3, 0.0046) (4, 0.0064) (5, 0.0000)};
         \addplot 
-            coordinates {(DA, 0.0053) (FTU, 0.0083) (GS, 0.0052) (EG, 0.0092) (TO, 0.0000)};
+            coordinates {(1, 0.0053) (2, 0.0083) (3, 0.0052) (4, 0.0092) (5, 0.0000)};
         \legend{Min,Max}
         \end{axis}
         \end{tikzpicture}
