--- a/sections/validation.tex
+++ b/sections/validation.tex
@@ -233,16 +233,27 @@ About these results is possible to make some considerations:
 For each fairness algorithm employed in the Fair-by-Design workflow, the minimum and maximum accuracy values are presented. This analysis provides insights into the range of accuracy outcomes associated with each fairness algorithm.
 In order to report a more compact visualization of the results to each algorithm is assigned a numerical identifier:
 
-\begin{itemize}
+\begin{figure}[H]
+    \centering
+    \begin{tabular}{|c|c|}
+        \hline
+        \textbf{Algorithm} & \textbf{Code} \\
+        \hline
+        DA & 1 \\
+        \hline
+        FTU & 2 \\
+        \hline
+        GS & 3 \\
+        \hline
+        EG & 4 \\
+        \hline
+        TO & 5 \\
+        \hline
+    \end{tabular}
+    \caption{Algorithm encoding}
+\end{figure}
 
-    \item \emph{DA}: 1
-    \item \emph{FTU}: 2
-    \item \emph{GS}: 3
-    \item \emph{EG}: 4
-    \item \emph{TO}: 5
-
-\end{itemize}
-
+\paragraph{Accuracy}
 \begin{figure}[H]
     \centering
     \begin{tikzpicture}
@@ -277,7 +288,7 @@ There are some considerations that can be made about the accurencies presented:
 \end{enumerate}
 
 Similarly, for each fairness algorithm, the minimum and maximum fairness values are presented. This evaluation allows for an understanding of the fairness outcomes associated with different algorithms, providing a comprehensive view of the trade-offs between accuracy and fairness.
-%\paragraph{Disparate impact for sex protected attribute}
+\paragraph{Disparate impact for sex protected attribute}
 \begin{figure}[H]
     \centering
     \begin{tikzpicture}
@@ -316,7 +327,7 @@ The disparate impact metric measures the degree on which each algorithm reach th
     \item \emph{Trade-off Consideration:} Assessing the trade-off between accuracy and the fairness metric, EG and DA emerge as promising candidates, showcasing a balance between achieving high accuracy and addressing demographic parity for the \emph{Sex} attribute.
 \end{enumerate}
 
-%\paragraph{Disparate impact for race protected attribute}
+\paragraph{Disparate impact for race protected attribute}
 
 \begin{figure}[H]
     \centering
@@ -351,7 +362,7 @@ Still considering the disparate impact metric but considering the \emph{Race} pr
 
     \item \emph{Trade-off Consideration:} DA emerges as a standout performer, providing both the highest disparate impact values and minimal variance. This aligns with the trade-off requirements, making DA a strong candidate for practitioners seeking a balanced solution for the \emph{Race} attribute.
 \end{enumerate}
-%\paragraph{Demographic parity difference for sex protected attribute}
+\paragraph{Demographic parity difference for sex protected attribute}
 
 \begin{figure}[H]
     \centering
@@ -385,7 +396,7 @@ The demographic parity difference metric measures the degree on which each algor
     \item \emph{Data Augmentation (DA) and Grid Search (GS) Trade-off Consideration:} DA and GS exhibit comparable performances in terms of DPD. However, GS outperforms DA by a marginal accuracy improvement of 0.1\%. This nuanced trade-off consideration positions GS as a slightly more favorable choice, aligning with the objective of balancing accuracy and fairness.
 \end{enumerate}
 
-%\paragraph{Demographic parity difference for race protected attribute}
+\paragraph{Demographic parity difference for race protected attribute}
 
 \begin{figure}[H]
     \centering
