--- a/sections/validation.tex
+++ b/sections/validation.tex
@@ -260,7 +260,7 @@ In order to report a more compact visualization of the results to each algorithm
         \begin{axis}[
             x tick label style={
                 /pgf/number format/1000 sep=},
-            ylabel=Year,
+            ylabel=Accuracy,
             enlargelimits=0.001,
             legend style={at={(0.5,-0.1)},
             anchor=north,legend columns=-1},
@@ -295,7 +295,7 @@ Similarly, for each fairness algorithm, the minimum and maximum fairness values 
         \begin{axis}[
             x tick label style={
                 /pgf/number format/1000 sep=},
-            ylabel=Year,
+            ylabel=Disparate Impact Sex,
             enlargelimits=0.001,
             legend style={at={(0.5,-0.1)},
             anchor=north,legend columns=-1},
@@ -335,7 +335,7 @@ The disparate impact metric measures the degree on which each algorithm reach th
         \begin{axis}[
             x tick label style={
                 /pgf/number format/1000 sep=},
-            ylabel=Year,
+            ylabel=Disparate Impact Race,
             enlargelimits=0.001,
             legend style={at={(0.5,-0.1)},
             anchor=north,legend columns=-1},
@@ -370,7 +370,7 @@ Still considering the disparate impact metric but considering the \emph{Race} pr
         \begin{axis}[
             x tick label style={
                 /pgf/number format/1000 sep=},
-            ylabel=Year,
+            ylabel=Demographic Parity Difference Sex,
             enlargelimits=0.001,
             legend style={at={(0.5,-0.1)},
             anchor=north,legend columns=-1},
@@ -404,7 +404,7 @@ The demographic parity difference metric measures the degree on which each algor
         \begin{axis}[
             x tick label style={
                 /pgf/number format/1000 sep=},
-            ylabel=Year,
+            ylabel=Demographic Parity Difference Race,
             enlargelimits=0.001,
             legend style={at={(0.5,-0.1)},
             anchor=north,legend columns=-1},
